# ComfyUI-InstructorOllama

./: InstructorOllama.py  README.md  __init__.py  pyproject.toml  requirements.txt
models/: Art.py  Character.py  Summary.py  Users.py
web/js/: OllamaInstructorNode.js
